[gd_scene load_steps=7 format=3 uid="uid://b875bod1sery4"]

[ext_resource type="Script" path="res://scenes/menus/game_over/game_over.gd" id="1_343qj"]
[ext_resource type="Theme" uid="uid://c1rii70uampsj" path="res://assets/ui_presets/title_theme.tres" id="1_c5ase"]
[ext_resource type="FontFile" uid="uid://2nly7s8oyw1t" path="res://assets/fonts/Typodermic Fonts/almonte woodgrain.otf" id="3_1u3qe"]
[ext_resource type="Texture2D" uid="uid://dbuc35s1dssdk" path="res://assets/tilesets/scraps_bricks.png" id="3_c78lb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k1osy"]
texture = ExtResource("3_c78lb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1h8dx"]
sources/0 = SubResource("TileSetAtlasSource_k1osy")

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c5ase")
script = ExtResource("1_343qj")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(0.231373, 0.141176, 0.0862745, 1)
scale = Vector2(10, 10)
tile_set = SubResource("TileSet_1h8dx")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 393216, 0, 65535, 393216, 0, 131071, 393216, 0, 196607, 393216, 0, 262143, 393216, 0, 327679, 393216, 0, -65536, 393216, 0, 0, 393216, 0, 65536, 393216, 0, 131072, 393216, 0, 196608, 393216, 0, 262144, 393216, 0, -65535, 393216, 0, 1, 393216, 0, 65537, 393216, 0, 131073, 393216, 0, 196609, 393216, 0, 262145, 393216, 0, -65534, 393216, 0, 2, 393216, 0, 65538, 393216, 0, 131074, 393216, 0, 196610, 393216, 0, 262146, 393216, 0, -65533, 393216, 0, 3, 393216, 0, 65539, 393216, 0, 131075, 393216, 0, 196611, 393216, 0, 262147, 393216, 0, -65532, 393216, 0, 4, 393216, 0, 65540, 393216, 0, 131076, 393216, 0, 196612, 393216, 0, 262148, 393216, 0, -65531, 393216, 0, 5, 393216, 0, 65541, 393216, 0, 131077, 393216, 0, 196613, 393216, 0, 262149, 393216, 0, -65530, 393216, 0, 6, 393216, 0, 65542, 393216, 0, 131078, 393216, 0, 196614, 393216, 0, 262150, 393216, 0, -65529, 393216, 0, 7, 393216, 0, 65543, 393216, 0, 131079, 393216, 0, 196615, 393216, 0, 262151, 393216, 0)

[node name="GameOverLavel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.16
anchor_top = 0.012
anchor_right = -0.16
anchor_bottom = 0.012
offset_left = 224.32
offset_top = 128.224
offset_right = 1272.32
offset_bottom = 374.224
text = "Game Over"
horizontal_alignment = 1

[node name="Pontuacao" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.16
anchor_top = 0.012
anchor_right = -0.16
anchor_bottom = 0.012
offset_left = 248.32
offset_top = 264.224
offset_right = 1296.32
offset_bottom = 510.224
theme_override_colors/font_color = Color(1, 0.509804, 0, 1)
theme_override_fonts/font = ExtResource("3_1u3qe")
theme_override_font_sizes/font_size = 60
text = "Pontuação Final:     "
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 272.0
offset_right = 872.0
offset_bottom = 395.0
theme_override_colors/font_color = Color(1, 0.509804, 0, 1)
theme_override_fonts/font = ExtResource("3_1u3qe")
theme_override_font_sizes/font_size = 60
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 384.0
offset_right = 768.0
offset_bottom = 576.0

[node name="TryAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tentar Novamente
"

[node name="BackToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Voltar ao Menu
"

[connection signal="pressed" from="VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
